<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/item_icon_iv"
            android:layout_width="@dimen/item_icon_size"
            android:layout_height="@dimen/item_icon_size"
            android:layout_marginLeft="-20dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/item_hot_iv"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@id/item_hot_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/jinping"
            android:visibility="invisible" />
    </RelativeLayout>

    <TextView
        android:id="@+id/item_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/gamename"
        android:textColor="@android:color/black"
        android:textSize="@dimen/item_name_size" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/item_category_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/category"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/item_size_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@+id/item_category_tv"
            android:singleLine="true"
            android:text="@string/size"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/item_download_btn"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:background="@drawable/bfgame_btn_blue_selector"
        android:text="@string/bfgame_text_download"
        android:textColor="@android:color/white"
        android:textSize="@dimen/item_download_sp" />

</LinearLayout>